<resources>
    <string name="app_name">Foods</string>
    <string name="logo_restaurant">Logo Restaurant</string>
    <string name="background_start_screen">Background Start Screen</string>
    <string name="get_started">Get Started</string>
    <string name="background_register">Background Register</string>
    <string name="register">Register</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_full_name">Please enter full-name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_re_password">Please enter re-password</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone</string>
    <string name="have_already_an_account">Have already an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="close_register_screen">Close register screen</string>
    <string name="register_account">Register Account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="close_login_screen">Close login screen</string>
    <string name="background_login">Background Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="description_for_products">Description for products</string>
    <string name="category">Category</string>
    <string name="avatar_image">Avatar Image</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="welcome_to_our_restaurant">Welcome to our restaurant!!!</string>
    <string name="background_profile">Background Profile</string>
    <string name="profile_title">Profile</string>
    <string name="username_or_UserId">userId/username</string>
    <string name="full_name">FullName</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="domain_domain_com">domain@domain.com</string>
    <string name="_0909098999">0909098999</string>
    <string name="change_password">Change Password</string>
    <string name="pizza">Pizza</string>
    <string name="_120">120</string>
    <string name="unit_price">$</string>
    <string name="all_pizza">All Pizza</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="image_menu">Image Menu</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="order_now">Order Now</string>
    <string name="image_cart_background">Image Cart Background</string>
    <string name="background_category_manager">Background Category Manager</string>
    <string name="background_admin">Background Admin</string>
    <string name="administrator">Administrator</string>
    <string name="product">Product</string>
    <string name="users">Users</string>
    <string name="background_products_management">Background Products Management</string>
    <string name="add_product">Add product</string>
    <string name="add_new">Add new</string>
    <string name="show_product">Show product</string>
    <string name="show_all">Show all</string>
    <string name="back_previous">Back previous</string>
    <string name="back">Back</string>
    <string name="show_users">Show users</string>
    <string name="show_user">Show user</string>
    <string name="background_users_management">Background Users Management</string>
    <string name="add_user">Add user</string>
    <string name="add_category">Add category</string>
    <string name="show_category">Show category</string>
    <string name="create_user">Create User</string>
    <string name="cancel">Cancel</string>
    <string name="products">Products</string>
    <string name="background_user_detail">Background User Detail</string>
    <string name="user_detail">User Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="please_enter_re_new_password">Please enter re-new password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="background_change_password">Background Change Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="background_forgot_password">Background Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_product">New Product</string>
    <string name="background_add_product">Background Add Product</string>
    <string name="new_category">New Category</string>
    <string name="background_add_category">Background Add Category</string>
    <string name="category_image">Category Image</string>
    <string name="please_enter_category_name">Please enter category name</string>
    <string name="image_category">Image Category</string>
    <string name="category_id">category id</string>
    <string name="category_name">category name</string>
    <string name="background_show_categories">Background Show Categories</string>
    <string name="lists_of_categories">Lists of Categories</string>
    <string name="go_to_add_category">Go To Add Category</string>
    <string name="go_to_list">Go To List</string>
    <string name="lists_of_users">Lists of Users</string>
    <string name="go_to_add_user">Go To Add User</string>
    <string name="category_detail">Category Detail</string>
    <string name="image_detail_item">Image Detail item</string>
    <string name="background_show_category_dialog">Background Show Category Dialog</string>
    <string name="products_image">Products Image</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_product_quantity">Please enter product quantity</string>
    <string name="please_enter_product_price">Please enter product price</string>
    <string name="new_a_product">New A Product</string>
    <string name="product_id">product id</string>
    <string name="product_name">product name</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="type">type</string>
    <string name="background_show_product">Background show product</string>
    <string name="lists_of_products">Lists of Products</string>
    <string name="go_to_add_product">Go To Add Product</string>
    <string name="background_product_dialog_detail">Background Product Dialog Detail</string>
    <string name="product_detail">Product Detail</string>
</resources>