<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:id="@+id/product_list_item">

    <LinearLayout
        android:id="@+id/product_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_item_show"
        android:backgroundTint="@color/transparent_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_item_image_show"
            android:layout_width="170dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_category"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/layout_product_item_detail"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_product_item_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="5dp"
                android:hint="@string/product_id"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <TextView
                android:id="@+id/txt_product_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="5dp"
                android:hint="@string/product_name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <TextView
                android:id="@+id/txt_product_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="5dp"                android:hint="@string/quantity"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <TextView
                android:id="@+id/txt_product_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="5dp"                android:hint="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

            <TextView
                android:id="@+id/txt_product_item_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="5dp"                android:hint="@string/type"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>