<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.management.user.UserManagementActivity">

    <ImageView
        android:id="@+id/img_background_manageUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_user"
        android:contentDescription="@string/background_users_management"
        android:foreground="@drawable/img_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_user_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/users"
        android:textColor="@color/yellow"
        android:textSize="80sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_manager"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/layout_add_user"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/add_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_add" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_new"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_show_user"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/show_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_show" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/show_users"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_back_admin"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/back_previous"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/ic_cancel" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>