<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.RegisterActivity">

    <ImageView
        android:id="@+id/img_background_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register"
        android:contentDescription="@string/background_register"
        android:foreground="@drawable/img_foreground"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/form_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_background_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_background_register">

        <TextView
            android:id="@+id/txt_register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_username"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_full_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_key"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_re_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_address"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_address"
            android:inputType="textPostalAddress"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txt_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/transparent_80"
            android:drawableStart="@drawable/icon_phone"
            android:drawablePadding="15dp"
            android:hint="@string/please_enter_phone"
            android:inputType="textPhonetic"
            android:paddingStart="20dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:paddingBottom="7dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radius"
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/form_other_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_register_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_already_an_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_toSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_register_cancel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/close_register_screen"
            android:src="@drawable/ic_close" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>