<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_list_item"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/category_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_item_show"
        android:backgroundTint="@color/transparent_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/category_item_image_show"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_category"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/layout_category_item_detail"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_category_item_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/category_id"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txt_category_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_name"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>